fix hat on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -218,7 +218,7 @@ body {
 
   .six .hat {
     width: 50px;
-    top: -20px;
+    top: -6px;
   }
 
   .wish-hbd {
